--- a/frontend_real/src/pages/Home.css
+++ b/frontend_real/src/pages/Home.css
@@ -14,28 +14,43 @@
 }
 
 .header {
-    background-color: #4ECDC4;
+    background-color: #15535e;
     padding: 20px;
     border-radius: 40px;
     margin: 5vh;
-    transition: 0.3s
+    transition: 0.3s;
     
 }
 
 .header:hover {
-    background-color: #131313;
-    padding: 2%;
+    background-color: #033036;
+    padding: 1%;
+    cursor: pointer;
 }
 
 .userText {
     font-size: 20;
     text-align: center;
     color: rgb(255, 255, 255);
+    text-decoration: none;
+    font-weight: bold;
 
 }
 
+.streak {
+    color: hsl(189, 66%, 14%);
+}
 
 .streak {
     font-size: 20px;
+    margin: 0 auto;
 }
 
+.Unicorn {
+    z-index: -10;
+    position: relative;
+    margin: -20% auto;
+    max-height: 475px;
+
+
+}
