--- a/frontend_real/src/pages/Stats.css
+++ b/frontend_real/src/pages/Stats.css
@@ -77,7 +77,8 @@ p {
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
     padding: 2%;
-    color: #95FFEC;
+    color: #ffffff;
+    font-size: 12pt;
 }
 
 .merchPic {
