--- a/frontend_real/src/pages/Leaderboard.css
+++ b/frontend_real/src/pages/Leaderboard.css
@@ -1,3 +1,22 @@
+
 .leaderboard-container {
     background-color: white;
+}
+
+.leaderboard-item {
+    border-radius: 50px;
+    background-color: rgba(255,255,255,0.7);
+    justify-content: left;
+    display: flex;
+    padding: 4%;
+    margin: 5%;
+}
+
+h1 {
+    color: rgb(13, 70, 93)
+}
+
+p {
+    padding-left: 5%;
+    font-weight: bold;
 }
