--- a/frontend_real/src/pages/Tasks.css
+++ b/frontend_real/src/pages/Tasks.css
@@ -4,4 +4,33 @@ body {
 
 .tasks-background {
     height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+}
+
+.task-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+    margin-top: 40vh;
+}
+
+.task {
+    background-color: white;
+    padding: 2vw;
+    margin: 2vw;
+    border-radius: 40px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    /* padding-bottom: 100px; */
+}
+
+.task > p {
+    color: rgb(11, 95, 99);
 }
