--- a/frontend_real/src/pages/Leaderboard.css
+++ b/frontend_real/src/pages/Leaderboard.css
@@ -5,11 +5,12 @@
 
 .leaderboard-item {
     border-radius: 50px;
-    background-color: rgba(255,255,255,0.7);
+    background-color: rgba(255, 255, 255, 0.7);
     justify-content: left;
     display: flex;
     padding: 4%;
     margin: 5%;
+    width: 80vw;
 }
 
 h1 {
@@ -19,4 +20,26 @@ h1 {
 p {
     padding-left: 5%;
     font-weight: bold;
+}
+
+.board {
+    display: flex;
+    flex-direction: row;
+  
+}
+
+.subboardR {
+    justify-content: right;
+    text-align: right;
+    width: 100vw;
+    border-radius: 0px;
+    display: flex;
+    padding: 4%;
+    margin: 5%;
+}
+
+.streakelem {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
 }
