--- a/frontend_real/src/assets/NavBar.css
+++ b/frontend_real/src/assets/NavBar.css
@@ -11,6 +11,7 @@
     border-radius: 30px;
     align-self: end;
     align-items: center;
+    justify-content: start;
 }
 
 .icon > img {
@@ -19,7 +20,7 @@
     object-fit: cover; /* Ensures the image covers the entire space while maintaining aspect ratio */
     justify-content: space-between;
     padding: 1vh;
-    margin: 1vh;
+    margin-left: 2vh;
     align-self: center;
 }
 
