--- a/frontend_real/src/pages/Home.css
+++ b/frontend_real/src/pages/Home.css
@@ -15,26 +15,26 @@
 
 .header {
     background-color: #15535e;
-    padding: 20px;
+    padding-top: 2px;
+    padding-bottom: 18px;
+    height: 10vw;
     border-radius: 40px;
     margin: 5vh;
     transition: 0.3s;
-    
+}
+
+.header > p {
+    font-size: 20;
+    text-align: center;
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    font-weight: bold;  
 }
 
 .header:hover {
     background-color: #033036;
     padding: 1%;
     cursor: pointer;
-}
-
-.userText {
-    font-size: 20;
-    text-align: center;
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-    font-weight: bold;
-
 }
 
 .streak {
