--- a/frontend_real/src/pages/Tasks.css
+++ b/frontend_real/src/pages/Tasks.css
@@ -15,15 +15,15 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: start;
-    margin-top: 40vh;
+    margin-top: 48vh;
 }
 
 .task {
     background-color: white;
-    padding: 2vw;
+    padding: 1vw;
     margin: 2vw;
     border-radius: 40px;
-    width: 100%;
+    width: 80vw;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -33,10 +33,16 @@ body {
 
 .task > p {
     color: rgb(11, 95, 99);
+    text-decoration: none;
+}
+
+.task:hover {
+    background-color: grey;
 }
 
 .taskB {
     border: none;
     fill: none;
-    background-color: rgba(0,0,0,0)
+    background-color: rgba(0,0,0,0);
+    text-decoration: none;
 }
