--- a/frontend_real/src/pages/Home.css
+++ b/frontend_real/src/pages/Home.css
@@ -19,7 +19,7 @@
     padding-bottom: 18px;
     height: 10vw;
     border-radius: 40px;
-    margin: 5vh;
+    margin: 4vh 5vh 5vh 5vh;
     transition: 0.3s;
 }
 
