--- a/frontend_real/src/assets/NavBar.css
+++ b/frontend_real/src/assets/NavBar.css
@@ -1,6 +1,7 @@
 .navbar {
     display: flex;
-    background-color: rgba(255, 255, 255, 0.7);
+    /* background-color: rgba(255, 255, 255, 0.7); */
+    background-color: rgba(255, 255, 255, 1);
     flex-direction: row;
     justify-content: space-between;
     padding: 2vh;
