--- a/frontend_real/src/pages/Stats.css
+++ b/frontend_real/src/pages/Stats.css
@@ -52,6 +52,7 @@ p {
     justify-content: center;
     max-width: 90%;
     margin: 5vw;
+    margin-top: 2vw;
     animation: slidein 1s ease-in 0s;
 }
 
