--- a/frontend_real/src/pages/AddFriends.css
+++ b/frontend_real/src/pages/AddFriends.css
@@ -1,6 +1,13 @@
 .friendbox {
-    margin: 0 auto;
-    display: flex;
+    align-items: center;
     flex-direction: row;
     background-color: white;
+}
+
+
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
 }
